objects/ssot__BuyerIntent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BuyerIntent_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BuyerIntent_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>BuyerIntent_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>BuyerIntent_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__BuyerIntent_CreatedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BuyerIntent_CreatedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>BuyerIntent_CreatedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>BuyerIntent_CreatedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__BuyerIntent_LeadId_map_Lead_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BuyerIntent_LeadId_map_Lead_Id_N_1</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>BuyerIntent_LeadId_map_Lead_Id_N_1</relationshipLabel>
        <relationshipName>BuyerIntent_LeadId_map_Lead_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__BuyerIntent_PartyId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BuyerIntent_PartyId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>BuyerIntent_PartyId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>BuyerIntent_PartyId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Buyer Intent Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntentDateTime__c</fullName>
        <label>Intent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__IntentTopicName__c</fullName>
        <label>Intent Topic Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntentTopicStrngScrText__c</fullName>
        <label>Intent Topic Strength Score</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTrending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadId__c</fullName>
        <label>Lead</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PeopleResearchingCount__c</fullName>
        <label>People Researching Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ThirdPartyProviderName__c</fullName>
        <label>Third Party Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TrendDaysNumber__c</fullName>
        <label>Trending Days Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TrendingScoreNumber__c</fullName>
        <label>Trending Score</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720290996147_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BuyerIntent_LastModifiedById_map_Use_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>BuyerIntent_LastModifiedById_map_Use_rel</relationshipLabel>
        <relationshipName>rel_1720290996147_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>